# thumbnail_generator

./: .editorconfig  .gitignore  README.md  pyproject.toml  thumbnail_generator.py
